<resources>
    <string name="app_name">TaskManager</string>
    <string name="process_manager_text">进程管理</string>
    <string name="running_process_text">正在运行的进程</string>
    <string name="rest_all_mem">剩余/总内存</string>
    <string name="select_all_text">全选</string>
    <string name="select_oppisite">反选</string>
    <string name="clear_text">清理</string>
    <string name="setting_text">设置</string>
    <string name="title_text">标题</string>
    <string name="mem_used">内存占用:计算中</string>
    <string name="task_setting">进程管理器设置</string>
    <string name="show_system_task">显示系统进程</string>
    <string name="clear_on_time">定时清理进程</string>
    <string name="free_mem">可用内存：计算中</string>
    <string name="loading">正在加载进程信息...</string>
    <string name="user_process_count">用户进程：</string>
</resources>
