<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="#8866ff00"
        android:gravity="center"
        android:text="@string/task_setting"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cb_show_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_system_task"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cb_kill_process_on_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_on_time"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>