<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:background="@drawable/widget_bg_portrait_child"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/tv_process_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_process_text"
            android:layout_marginLeft="10dp"
            android:textAppearance="@style/widget_text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/widget_bg_portrait_child_divider" />

        <TextView
            android:id="@+id/tv_process_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_mem"
            android:layout_marginLeft="10dp"
            android:textAppearance="@style/widget_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_clean"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_selector"
            android:text="一键清理"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>
